--- a/views/fetch.erb
+++ b/views/fetch.erb
@@ -4,8 +4,9 @@
     <title>Onceler Secret</title>
     <style type="text/css">
     #secret {
-      border 1px solid #ccc;
-      padding 1em;
+      border: 1px solid #ccc;
+      padding: 1em;
+      display: table;
     }
     </style>
   </head>
