--- a/views/info.erb
+++ b/views/info.erb
@@ -8,7 +8,7 @@
   <body>
     <h1>Onceler</h1>
     <h3>
-      I will call you by Whisper-ma-Phone,
+      I will call you by Whisper-ma-Phone,<br/>
       for the secrets I tell you are for your ears alone.
     </h3>
 
