Tweak the view URL and add link footer.

--- a/views/info.erb
+++ b/views/info.erb
@@ -12,7 +12,7 @@
       for the secrets I tell you are for your ears alone.
     </h3>
 
-    <form method="post" action="./get">
+    <form method="post" action="./">
       <button type="submit">View secret</button>
       (Button will only work once.)
     </form>
