--- a/views/not_found.erb
+++ b/views/not_found.erb
@@ -14,6 +14,9 @@
     </p>
     <img src="/img/notfound.jpg" alt="lorax" />
     <% # TODO: find a good UNLESS image %>
+    <p>
+      <a href="../">Share another secret</a>
+    </p>
   </body>
 </html>
 <% # vim: set ft=eruby sw=2 ts=2 tw=79: %>
