--- a/views/fetch.erb
+++ b/views/fetch.erb
@@ -17,14 +17,23 @@
       for the secrets I tell you are for your ears alone.
     </h3>
 
-    <pre id="secret"><%= @data.content %></pre>
+    <pre id="secret"><%= @entry.content %></pre>
 
+<% if @entry.once? || @deleted %>
     <p>
       This secret will be gone forever when you refresh.
       It has already been deleted from the server.
     </p>
+<% else %>
+    <p>
+      This is a multi-use secret.
+      <form method="post" action="<%= @delete_link or raise 'delete_link' %>">
+        <button type="submit">Delete</button>
+      </form>
+    </p>
+<% end %>
 
-    <p>This secret was created from <%= @data.remote_host %> at <%= Time.at(@data.created) %></p>
+    <p>This secret was created from <%= @entry.remote_host %> at <%= Time.at(@entry.created) %></p>
 
     <p>
       <a href="../../">Share your own secret</a>
