--- a/views/info.erb
+++ b/views/info.erb
@@ -17,7 +17,7 @@
       (Button will only work once.)
     </form>
 
-    <p>This secret was created from <%= @data.remote_host %> at <%= Time.at(@data.created) %></p>
+    <p>This secret was created from <%= @entry.remote_host %> at <%= Time.at(@entry.created) %></p>
 
     <p>
       <a href="../../">Share your own secret</a>
