Improve styles and fix remote host logic.

--- a/views/error.erb
+++ b/views/error.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Onceler - Error</title>
+<%= erb :'partials/header' %>
   </head>
   <body>
     <h1>Internal Server Error</h1>
