--- a/views/fetch.erb
+++ b/views/fetch.erb
@@ -9,6 +9,7 @@
       display: table;
     }
     </style>
+<%= erb :'partials/header' %>
   </head>
   <body>
     <h1>Onceler</h1>
@@ -33,10 +34,14 @@
     </p>
 <% end %>
 
-    <p>This secret was created from <%= escape @entry.remote_host %> at <%= Time.at(@entry.created) %></p>
+    <p>
+      This secret was created from
+      <code><%= escape(@entry.remote_host || @entry.remote_ip) %></code>
+      at <%= Time.at(@entry.created) %>
+    </p>
 
     <p>
-      <a href="../../">Share your own secret</a>
+      <form><button formaction="../../">Share your own secret</button></form>
     </p>
   </body>
 </html>
