--- a/views/info.erb
+++ b/views/info.erb
@@ -2,8 +2,7 @@
 <html>
   <head>
     <title>Onceler Secret</title>
-    <style type="text/css">
-    </style>
+<%= erb :'partials/header' %>
   </head>
   <body>
     <h1>Onceler</h1>
@@ -20,7 +19,7 @@
     <p>This secret was created from <%= escape @entry.remote_host %> at <%= Time.at(@entry.created) %></p>
 
     <p>
-      <a href="../../">Share your own secret</a>
+      <form><button formaction="../../">Share your own secret</button></form>
     </p>
   </body>
 </html>
