Add "Fork me on GitHub" ribbon.

--- a/views/info.erb
+++ b/views/info.erb
@@ -5,6 +5,8 @@
 <%= erb :'partials/header' %>
   </head>
   <body>
+    <%= erb :'partials/bodyheader' %>
+
     <h1>Onceler</h1>
     <h3>
       I will call you by Whisper-ma-Phone,<br/>
