--- a/views/link.erb
+++ b/views/link.erb
@@ -11,6 +11,8 @@
 <%= erb :'partials/header' %>
   </head>
   <body>
+    <%= erb :'partials/bodyheader' %>
+
     <h1>Onceler</h1>
     <h3>Your secret link:</h3>
     <% link = @secret_url %>
