--- a/views/not_found.erb
+++ b/views/not_found.erb
@@ -5,6 +5,8 @@
 <%= erb :'partials/header' %>
   </head>
   <body>
+    <%= erb :'partials/bodyheader' %>
+
     <h1>Not Found</h1>
     <p>
       The onceler listens to your secrets and gives you a link to share them
