--- a/views/fetch.erb
+++ b/views/fetch.erb
@@ -12,6 +12,8 @@
 <%= erb :'partials/header' %>
   </head>
   <body>
+    <%= erb :'partials/bodyheader' %>
+
     <h1>Onceler</h1>
     <h3>
       I will call you by Whisper-ma-Phone,<br/>
