Return 404 for nonexistent multiuse clips.
Use absolute link from 404 page since we don't know where we are.

--- a/views/not_found.erb
+++ b/views/not_found.erb
@@ -18,7 +18,7 @@
     <img src="/img/notfound.jpg" alt="lorax" />
     <% # TODO: find a good UNLESS image %>
     <p>
-      <form><button formaction="../">Share another secret</button></form>
+      <form><button formaction="/">Share another secret</button></form>
     </p>
   </body>
 </html>
