Support the fly.io HTTP header for client IP addr.
https://fly.io/docs/reference/runtime-environment/

Look to Fly-Client-IP if we're running in fly.io.

--- a/views/fetch.erb
+++ b/views/fetch.erb
@@ -22,7 +22,7 @@
 
     <p>
       This secret was created from
-      <code><%= escape(@entry.remote_host || @entry.remote_ip) %></code>
+      <code><%= escape(@entry.created_by) %></code>
       at <%= Time.at(@entry.created) %>
     </p>
 
